--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,9 +5,8 @@
 </head>
 <body>
 
-  <li><b>URL - Short form:</b></li>
     <% for(element in urls) {%>
-      <li> <%= urls[element] %> - <a href=""><%= element%></a></li>
+      <li><b>Full URL:</b> <%= urls[element] %> - <b>Short form:</b> <a href=""><%= element%></a></li>
     <% } %>
 
 
