--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,10 +5,13 @@
 </head>
 <body>
 
+  <%- include('partials/_header') %>
+
+  <main>
     <% for(element in urls) {%>
       <li><b>Full URL:</b> <%= urls[element] %> - <b>Short form:</b> <a href=""><%= element%></a></li>
     <% } %>
-
+  </main>
 
 </body>
 </html>
