--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>TinyApp</title>
-</head>
-<body>
-
-  <%- include('partials/_header') %>
-
-  <main>
-    <li><b>Full URL:</b> <%= fullURL %> - <b>Short form:</b> <%= shortURL %></li>
-  </main>
-
-</body>
+  <head>
+    <title>TinyApp</title>
+  </head>
+  <body style="font-size:20px; padding:50px;">
+    <%- include('partials/_header') %>
+    <div>
+      <li><b>Full URL:</b> <%= fullURL %> - <b>Short form:</b> <%= shortURL %></li>
+    </div>
+  </body>
 </html>
