Some refactoring to simplify the code and add some comments

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
-<header style="font-size:20px; padding:50px;">
-  <p><strong>Tiny App</strong></p>
+<header padding:50px;">
+  <h1>Tiny App</h1>
 </header>
 
 
