coded functionality to update the URL

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,10 +3,27 @@
   <head>
     <title>TinyApp</title>
   </head>
-  <body style="font-size:20px; padding:50px;">
+  <body style="font-size:15px; padding:50px;">
     <%- include('partials/_header') %>
-    <ul>
-      <li><b>Full URL:</b> <%= fullURL %> - <b>Short form:</b> <%= shortURL %></li>
-    </ul>
+    <table>
+      <tr>
+        <td><b>Full URL:</b></td>
+        <td><b>Short form:</b></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><%= fullURL %></td>
+        <td><%= shortURL %></td>
+        <td>
+        <form action="/urls/<%= shortURL%>" method="POST">
+          <input id="longURL" type="text" name="newLongURL" style="width: 300px">
+          <input type="submit" value="Update">
+          </form>
+        </td>
+      </tr>
+    </table>
+
+
+
   </body>
 </html>
