coded updating URLs; style of HTML changed (included table); included links to reach other pages from main page and return

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,9 +7,9 @@
     <%- include('partials/_header') %>
     <table>
       <tr>
-        <td><b>Full URL:</b></td>
-        <td><b>Short form:</b></td>
-        <td></td>
+        <td width=250px><b>Full URL:</b></td>
+        <td width=100px><b>Short form:</b></td>
+        <td width=400px></td>
       </tr>
       <tr>
         <td><%= fullURL %></td>
@@ -20,6 +20,9 @@
           <input type="submit" value="Update">
           </form>
         </td>
+      </tr>
+      <tr>
+        <td colspan=4 height="50px"><a href="/urls">Return</a></td>
       </tr>
     </table>
 
