--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,17 +7,22 @@
     <%- include('partials/_header') %>
     <table>
       <tr>
-        <td><b>Full URL:</b></td>
-        <td><b>Short form:</b></td>
-        <td></td>
+        <td width=100px><b>Short URL:</b></td>
+        <td width=250px><b>Full form:</b></td>
+        <td width=60px></td>
+        <td width=60px></td>
       </tr>
       <% for(element in urls) {%>
         <tr>
-          <td><%= urls[element] %></td>
           <td><a href="/urls/<%= element%>"><%= element%></a></td>
+          <td><a href="/u/<%= element%>"><%= urls[element] %></a></td>
+          <td><a href="/urls/<%= element%>">Edit</a></td>
           <td><form method="POST" action="/urls/<%= element%>/delete"><input type="submit" value="Delete"></form></td>
         </tr>
       <% } %>
+      <tr>
+        <td colspan=4 align=center height="50px"><a href="/urls/new">New URL</a></td>
+      </tr>
     </table>
   </body>
 </html>
