included username form

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,17 @@
-<header padding:50px;">
+<header>
   <h1>Tiny App</h1>
+  <table>
+    <tr>
+      <td width=100px>
+        Your name:
+      </td>
+      <td width=370px>
+        <form action="/login" method="POST" style="margin:20px 0px;">
+          <input id="username" type="text" name="username" style="width: 300px">
+          <input type="submit" value="Submit">
+        </form>
+      </td>
+    </tr>
 </header>
 
 
