--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,22 +1,27 @@
 <header>
-  <h1>Tiny App</h1>
+  <div style="margin-left:200px; margin-top:20px;">
+    <h1>Tiny App</h1>
+  </div>
   <table>
     <tr>
-      <td colspan=2>
-        Hello, <%= username %>!
-      </td>
+      <% if (username) { %>
+        <td width="420"><h4>Hello, <%= username %>!</h4></td>
+        <td width="60">
+          <form action="/logout" method="POST" style="margin:20px 0px;">
+            <input type="submit" value="Logout">
+          </form>
+        </td>
+      <% } else { %>
+        <td width=100px>Your name:</td>
+        <td width=370px>
+          <form action="/login" method="POST" style="margin:20px 0px;">
+            <input id="username" type="text" name="username" style="width: 300px">
+            <input type="submit" value="Submit">
+          </form>
+        </td>
+      <% } %>
     </tr>
-    <tr>
-      <td width=100px>
-        Not you?
-      </td>
-      <td width=370px>
-        <form action="/login" method="POST" style="margin:20px 0px;">
-          <input id="username" type="text" name="username" style="width: 300px" value="Your name!">
-          <input type="submit" value="Submit">
-        </form>
-      </td>
-    </tr>
+  </table>
 </header>
 
 
