--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-  <html lang="en">
+<html lang="en">
   <head>
     <title>TinyApp</title>
   </head>
-  <body style="font-size:15px; padding:50px;">
+  <body style="font-size:15px; padding:20px;">
     <%- include('partials/_header') %>
-    <table>
+    <table style="border:1px solid gray;">
       <tr>
         <td width=100px><b>Short URL:</b></td>
         <td width=250px><b>Full form:</b></td>
-        <td width=60px></td>
-        <td width=60px></td>
+        <td colspan=2 width=120px></td>
       </tr>
       <% for(element in urls) {%>
         <tr>
-          <td><a href="/urls/<%= element%>"><%= element%></a></td>
+          <td><%= element%></td>
           <td><a href="/u/<%= element%>"><%= urls[element] %></a></td>
           <td><a href="/urls/<%= element%>">Edit</a></td>
           <td><form method="POST" action="/urls/<%= element%>/delete"><input type="submit" value="Delete"></form></td>
         </tr>
       <% } %>
-      <tr>
-        <td colspan=4 align=center height="50px"><a href="/urls/new">New URL</a></td>
-      </tr>
     </table>
+    <div style="margin-left:200px; margin-top:50px;">
+      <a href="/urls/new">New URL</a>
+    </div>
   </body>
 </html>
-
