--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:15px; padding:50px;">
+  <head>
+    <title>TinyApp</title>
+  </head>
+  <body style="font-size:15px; padding:20px;">
     <% include partials/_header %>
-    <table>
-    <tr>
-      <td>
-        <form action="/urls" method="POST" style="margin:50px;">
-          <label for="longURL">Enter a URL:</label>
-          <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-          <input type="submit" value="Submit">
-        </form>
-      </td>
-    </tr>
-    <tr>
-        <td><a href="/urls">Return</a></td>
-    </tr>
+    <table style="border:1px solid gray;">
+      <tr>
+        <td width=480px;>
+          <form action="/urls" method="POST" style="margin:10px;">
+            <label for="longURL">Enter a URL:</label>
+            <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+            <input type="submit" value="Submit">
+          </form>
+        </td>
+      </tr>
+    </table>
+    <div style="margin-left:10px; margin-top:50px;">
+      <a href="/urls">Return</a>
+    </div>
   </body>
 </html>
