--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,13 +20,8 @@
         </tr>
       <% } %>
     </table>
-    <div style="margin-top: 50px;">
-      <table>
-        <tr>
-          <td width="235" align=center><a href="/urls/new">New URL</a></td>
-          <td width="235" align=center><a href="/register">New user</a></td>
-        </tr>
-      </table>
+    <div style="margin-top: 50px; margin-left: 200px;">
+      <p><a href="/urls/new">New URL</a></p>
     </div>
   </body>
 </html>
