--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,23 +5,36 @@
   </head>
   <body style="font-size: 15px; padding: 20px;">
     <%- include('partials/_header') %>
+
+    <% if (user) { %>
     <table style="border: 1px solid gray;">
       <tr>
         <td width=100px><b>Short URL:</b></td>
         <td width=250px><b>Full form:</b></td>
         <td colspan=2 width=120px></td>
       </tr>
-      <% for(element in urls) {%>
+      <% if (Object.keys(urls).length === 0) { %>
         <tr>
-          <td><%= element%></td>
-          <td><a href="/u/<%= element%>"><%= urls[element] %></a></td>
-          <td><a href="/urls/<%= element%>">Edit</a></td>
-          <td><form method="POST" action="/urls/<%= element%>/delete"><input type="submit" value="Delete"></form></td>
+          <td colspan=4 align=center height="50px">You've not create any shortened URL yet.</td>
         </tr>
+      <% } else { %>
+        <% for(element in urls) { %>
+          <tr>
+            <td><%= element %></td>
+            <td><a href="/u/<%= element %>"><%= urls[element].url %></a></td>
+              <td><a href="/urls/<%= element %>">Edit</a></td>
+              <td><form method="POST" action="/urls/<%= element %>/delete"><input type="submit" value="Delete"></form></td>
+          </tr>
+        <% } %>
       <% } %>
     </table>
-    <div style="margin-top: 50px; margin-left: 200px;">
-      <p><a href="/urls/new">New URL</a></p>
+    <% } %>
+    <div style="margin-top: 50px; margin-left: 70px;">
+      <% if (!user) { %>
+        <p>To create, edit or delete a short URL, you must be logged in. <br>You can edit or delete your own short URL.</p>
+      <% } else { %>
+        <p style="margin-left: 150px;""><a href="/urls/new">New URL</a></p>
+      <% } %>
     </div>
   </body>
 </html>
