some visual changes on html; screenshots

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,10 +7,10 @@
     <%- include('partials/_header') %>
 
     <% if (user) { %>
-    <table style="border: 1px solid gray;">
+    <table style="border: 1px solid gray; width: 550px"">
       <tr>
         <td width=100px><b>Short URL:</b></td>
-        <td width=250px><b>Full form:</b></td>
+        <td width=300px><b>Full form:</b></td>
         <td colspan=2 width=120px></td>
       </tr>
       <% if (Object.keys(urls).length === 0) { %>
