--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,23 +1,23 @@
 <header>
-  <div style="margin-left: 150px; margin-top: 20px;">
+  <div style="width: 200px; padding: 5px 180px; margin: 0px; background-color: rgba(158, 158, 158, 0.34)">
     <h1>Tiny App</h1>
   </div>
   <table>
     <tr>
       <% if (user) { %>
-        <td width="420"><h4>Hello, <font color=blue><%= user.name %></font>! Here is your email: <font color=blue><%= user.email %><font color=blue></h4></td>
+        <td width="500"><h4>Hello, <font color=blue><%= user.name %></font>! Here is your email: <font color=blue><%= user.email %><font color=blue></h4></td>
         <td width="60">
           <form action="/logout" method="POST" style="margin: 20px 0px;">
             <input type="submit" value="Logout">
           </form>
         </td>
       <% } else { %>
-        <td width=230px align=center style="padding-bottom: 20px;">
+        <td width=280px align=center style="padding-bottom: 20px; padding-top: 20px;">
           <form action="/login" method="GET" style="margin: 10px 0px;">
             <input type="submit" value="Login">
           </form>
         </td>
-        <td width=230px align=center style="padding-bottom: 20px;">
+        <td width=280px align=center style="padding-bottom: 20px; padding-top: 20px;">
           <form action="/register" method="GET" style="margin: 10px 0px;">
             <input type="submit" value="Register">
           </form>
