--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -5,12 +5,12 @@
   </head>
   <body style="font-size: 15px; padding: 20px;">
     <% include partials/_header %>
-    <table style="border: 1px solid gray;">
+    <table style="border: 1px solid gray; width: 550px">
       <tr>
         <td width=480px;>
           <form action="/urls" method="POST" style="margin: 10px;">
             <label for="longURL">Enter a URL:</label>
-            <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+            <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 370px">
             <input type="submit" value="Submit">
           </form>
         </td>
