refactoring html to change the page layout

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <div style="width: 200px; padding: 5px 180px; margin: 0px; background-color: rgba(158, 158, 158, 0.34)">
+  <div style=" padding: 5px 180px; margin: 0px; background-color: rgba(158, 158, 158, 0.34)">
     <h1>Tiny App</h1>
   </div>
   <table>
