--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,25 +3,27 @@
   <head>
     <title>TinyApp</title>
   </head>
-  <body style="font-size: 15px; padding: 20px;">
-    <%- include('partials/_header') %>
-    <table style="border: 1px solid gray; width: 550px">
-      <tr>
-        <td width=100px><b>Short URL:</b></td>
-        <td width=380px><b>Full form:</b></td>
-      </tr>
-      <tr>
-        <td><%= shortURL %></td>
-        <td>
-          <form action="/urls/<%= shortURL%>" method="POST">
-            <input id="longURL" type="text" name="newLongURL" style="width: 350px" value="<%= fullURL %>">
-            <input type="submit" value="Update">
-          </form>
-        </td>
-      </tr>
-    </table>
-    <div style="margin-left: 10px; margin-top: 50px;">
-      <a href="/urls">Return</a>
-    </div>
+  <body style="font-size: 15px; padding: 10px;  margin: 0;">
+    <main style="height: 500px; max-width: 600px; margin: auto; padding: 20px; border:3px solid grey;" align=center>
+      <%- include('partials/_header') %>
+      <table style="margin: auto; border: 1px solid gray;" width= 590px>
+        <tr>
+          <td width=100px><b>Short URL:</b></td>
+          <td width=380px><b>Full form:</b></td>
+        </tr>
+        <tr>
+          <td><%= shortURL %></td>
+          <td>
+            <form action="/urls/<%= shortURL%>" method="POST">
+              <input id="longURL" type="text" name="newLongURL" style="width: 350px" value="<%= fullURL %>">
+              <input type="submit" value="Update">
+            </form>
+          </td>
+        </tr>
+      </table>
+      <div style="margin-left: 10px; margin-top: 50px;" align=left>
+        <a href="/urls">Return</a>
+      </div>
+    </main>
   </body>
 </html>
