--- a/views/register_user.ejs
+++ b/views/register_user.ejs
@@ -3,28 +3,30 @@
   <head>
     <title>TinyApp</title>
   </head>
-  <body style="font-size: 15px; padding: 20px;">
-    <% include partials/_header %>
-    <div style="margin-left: 10px; margin-top: 10px; border: 1px solid gray; width: 550px">
-      <form action="/register" method="POST" style="margin:10px;">
-        <table>
-          <tr>
-            <td><label for="userRegsitration">Name:</label></td>
-            <td><input id="name" type="text" name="name" style="width: 450px"></td>
-          </tr>
-          <tr>
-            <td><label for="userRegsitration">E-mail:</label></td>
-            <td><input id="email" type="email" name="email" style="width: 450px"></td>
-          </tr>
-          <tr>
-            <td><label for="userRegsitration">Password:</label></td>
-            <td><input id="password" type="password" name="password" style="width: 450px"></td>
-          </tr>
-          <tr>
-            <td colspan=2 align="center" height="35px"><input type="submit" value="Submit"></td>
-          </tr>
-        </table>
-      </form>
-    </div>
+  <body style="font-size: 15px; padding: 10px;  margin: 0;">
+    <main style="height:500px; max-width: 600px; margin: auto; padding: 20px; border:3px solid grey;" align=center>
+      <% include partials/_header %>
+      <div style="margin: auto; border: 1px solid gray;">
+        <form action="/register" method="POST" style="margin:10px;">
+          <table>
+            <tr>
+              <td><label for="userRegsitration">Name:</label></td>
+              <td><input id="name" type="text" name="name" style="width: 450px"></td>
+            </tr>
+            <tr>
+              <td><label for="userRegsitration">E-mail:</label></td>
+              <td><input id="email" type="email" name="email" style="width: 450px"></td>
+            </tr>
+            <tr>
+              <td><label for="userRegsitration">Password:</label></td>
+              <td><input id="password" type="password" name="password" style="width: 450px"></td>
+            </tr>
+            <tr>
+              <td colspan=2 align="center" height="35px"><input type="submit" value="Submit"></td>
+            </tr>
+          </table>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
