--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -23,7 +23,7 @@
               <td><%= element %></td>
               <td><a href="/u/<%= element %>"><%= urls[element].url %></a></td>
                 <td><a href="/urls/<%= element %>">Edit</a></td>
-                <td><form method="POST" action="/urls/<%= element %>/delete"><input type="submit" value="Delete"></form></td>
+                <td><form method="POST" action="/urls/<%= element %>?_method=DELETE"><input type="submit" value="Delete"></form></td>
             </tr>
           <% } %>
         <% } %>
