--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,8 +9,8 @@
       <% if (user) { %>
       <table style="margin: auto; border: 1px solid gray;" width= 590px>
         <tr>
-          <td width=100px><b>Short URL:</b></td>
-          <td width=300px><b>Full form:</b></td>
+          <td width=100px align=left style="padding-left: 10px;"><b>Short URL:</b></td>
+          <td width=300px align=left style="padding-left: 10px;"><b>Full form:</b></td>
           <td colspan=2 width=120px></td>
         </tr>
         <% if (Object.keys(urls).length === 0) { %>
@@ -19,9 +19,9 @@
           </tr>
         <% } else { %>
           <% for(element in urls) { %>
-            <tr>
-              <td><%= element %></td>
-              <td><a href="/u/<%= element %>"><%= urls[element].url %></a></td>
+            <tr align=left>
+              <td style="padding-left: 10px;"><%= element %></td>
+              <td style="padding-left: 10px;"><a href="/u/<%= element %>"><%= urls[element].url %></a></td>
                 <td><a href="/urls/<%= element %>">Edit</a></td>
                 <td><form method="POST" action="/urls/<%= element %>?_method=DELETE"><input type="submit" value="Delete"></form></td>
             </tr>
