--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,8 +20,8 @@
         <% } else { %>
           <% for(element in urls) { %>
             <tr align=left>
-              <td style="padding-left: 10px;"><%= element %></td>
-              <td style="padding-left: 10px;"><a href="/u/<%= element %>"><%= urls[element].url %></a></td>
+              <td style="padding-left: 10px;"><a href="/u/<%= element %>"><%= element %></a></td>
+              <td style="padding-left: 10px;"><%= urls[element].url %></td>
                 <td><a href="/urls/<%= element %>">Edit</a></td>
                 <td><form method="POST" action="/urls/<%= element %>?_method=DELETE"><input type="submit" value="Delete"></form></td>
             </tr>
