--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,6 +20,30 @@
             </form>
           </td>
         </tr>
+        <tr>
+          <td colspan="2"  style="padding-top: 30px"><b>Statistics:</b></td>
+        </tr>
+        <tr>
+          <td colspan=2 align=left>Visitors: <%= tracking.howManyVisitor %></td>
+        </tr>
+        <tr>
+          <td colspan=2 align=left>Unique visitors: <%= tracking.howManyUniqueVisitors.length %></td>
+        </tr>
+        <tr>
+          <td colspan=2 align=left>Visits: </td>
+        </tr>
+          <% if(tracking.track.length > 0) {
+            for (let i = 0; i < tracking.track.length; i++){
+          %>
+            <tr>
+              <td colspan=2 align=left>-> <%= tracking.track[i].join(" - "); %></td>
+            </tr>
+          <% }
+          } else { %>
+            <tr>
+              <td colspan=2 align=left>-> This page has no visits yet.</td>
+            </tr>
+          <% } %>
       </table>
       <div style="margin-left: 10px; margin-top: 50px;" align=left>
         <a href="/urls">Return</a>
